--- a/.firebaserc
+++ b/.firebaserc
@@ -2,4 +2,11 @@
   "projects": {
     "default": "timeswebsite"
   }
+  "headers": [ {
+    "source": "*.php",
+    "headers": [ {
+      "key": "Content-Type",
+      "value": "text/html"
+    } ]
+  ] }
 }
